package com.shopm2.shop.api.model;

import java.util.List;

public class CategoriesList {
    private List<CategoryDTO> items;

    public List<CategoryDTO> getItems() {
        return items;
    }
}
