package com.shopm2.shop.api.model;

import java.util.List;

public class CategoryListSugar {
    List<CategoryDTO> items;
}
